# destral

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  PhysxUnrealDocs.txt  README.md  cplusplususage.md
include/: destral.h
include/destral/: destral_app.h  destral_base64.h  destral_common.h  destral_containers.h  destral_ecs.h  destral_filesystem.h  destral_font.h  destral_image.h  destral_input.h  destral_kv.h  destral_math.h  destral_renderer.h  destral_resource.h  destral_resource2.h  destral_resource_caches.h  destral_resource_loader.h  destral_sprite.h  destral_texture.h
include/destral/core/: destral_app.h  destral_asset.h  destral_base64.h  destral_common.h  destral_kv.h
include/destral/ecs/: destral_ecs.h
include/destral/gfw/: destral_gfw.h  destral_gfw.h.h
include/destral/graphics/: destral_graphics.h  destral_image.h  destral_renderer.h
include/destral/input/: destral_input.h
include/destral/math/: destral_math.h
include/destral/resource/: resource.h  resource_caches.h
sandbox/: CMakeLists.txt  imgui.ini
sandbox/arkanoid/: CMakeLists.txt  arkanoid.c  arkanoid.cpp  imgui.ini  main.lua
sandbox/collision_test/: CMakeLists.txt  collision_test.cpp
sandbox/collision_testing/: collision_test.cpp
sandbox/font_test/: CMakeLists.txt  font_test.cpp
sandbox/pong/: CMakeLists.txt  pong.cpp
sandbox/shootemup/: CMakeLists.txt  shootemup.cpp
sandbox/test_graphics/: CMakeLists.txt  UnitAnimations.aseprite  test_graphics.cpp
sandbox/zelda_nes/: CMakeLists.txt  zelda_nes.cpp
src/: CMakeLists.txt  destral_app.cpp  destral_common.cpp  destral_ecs.cpp  destral_filesystem.cpp  destral_font.cpp  destral_image.cpp  destral_renderer.cpp  destral_resource.cpp  destral_resource2.cpp  destral_resource_caches.cpp  destral_serializer.cpp  destral_sprite.cpp  destral_texture.cpp
src/ap/: ap_debug.h  ap_gl33compat.h  ap_opengl.h  ap_sdl.h  cute_png.h  fontstash.h  sokol_fontstash.h  sokol_gfx.h  stb_truetype.h
src/backends/: destral_graphics_backend.h  destral_graphics_sokol.cpp  destral_input_backend.h  destral_platform_backend.h  destral_platform_sdl_backend.cpp  destral_sdl_backend.cpp
src/core/: destral_app.cpp  destral_asset.cpp  destral_common.cpp  destral_serializer.cpp
src/destral/: CMakeLists.txt  archtypes.cpp  archtypes.h  assets.cpp  assets.h  collision.cpp  collision.h  destral.c  destral.cpp  destral.h  ecs.c  ecs.cpp  ecs.h  header_only_impl.c  header_only_impl.cpp  math2d.cpp  math2d.h  math_funs.cpp  math_funs.h  platform.h  rect.cpp  rect.h  render.c  render.cpp  render.h  transform.c  transform.cpp  transform.h  types.cpp  types.h  types_math.h
src/destral/bp/: bp.cpp  bp.h  bp_bindings.cpp  bp_bindings.h
src/destral/old/: renderer.cpp  renderer.h  transform.cpp  transform.h  types_math.h
src/ecs/: destral_ecs.cpp
src/gfw/: destral_gfw.cpp
src/graphics/: destral_graphics.cpp  destral_image.cpp  destral_renderer.cpp
src/input/: destral_input.cpp
src/nlohmann/: json_fwd.hpp
src/resource/: resource_caches.cpp
src/sol/: config.hpp  forward.hpp  sol.hpp
